[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "yoo_XXAOL"
version = "1"
authors = [
  { name="xxaol", email="" },
]
description = "Not a yay ripoff"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
